--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,10 @@ inputs:
     description: "Set to `dark` to generate charts compatible with Github dark mode. Defaults to 'light'."
     default: "light"
     required: false
+  parse_log_groups:
+    description: "Set to `true` to build the step trace graph with additional detail by parsing log groups within each step. Set to `false` to only show top-level steps. Defaults to `false`."
+    default: "step"
+    required: false
 
 runs:
   using: "node20"
