--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "@octokit/action": "^4.0.9",
     "@octokit/openapi-types": "^14.0.0",
     "axios": "^1.1.2",
+    "glob": "^11.0.0",
     "sprintf-js": "^1.1.2",
     "systeminformation": "^5.11.15"
   },
   "devDependencies": {
-    "@types/node": "^16.3.3",
+    "@types/node": "^20",
     "@types/sprintf-js": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
