--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           parse_log_groups: true
           metric_frequency: 1
+          github_token: ${{ secrets.TEST_PAT }}
       - name: Step 1
         run: |
           echo "::group::Test sub-step 1"
